V 
* features
- 
* bug fixes
- 

V 3.4.0
* features
- make virtual governors mandatory
- disable GPS switching (as system app)
- let only power users switch off CPUs and warn them
* bug fixes
- 

V 3.3.12
* features
- write directly to sysfs files is now a option
* bug fixes
- fix crashes introduced with version 3.3.11

V 3.3.11
* features
- Fix for Jelly Bean
* bug fixes
-

V 3.3.10
* features
- limit switch interval
* bug fixes
- fix min/max frequency spinners not updating
- fix governor editor for small screens

V 3.3.9
* features
- 
* bug fixes
- fix save in autoload config
- fix rare crashes

V 3.3.8
* features
- ISC optimisations
* bug fixes
- fix rare crashes

V 3.3.7
* features
- English translation ;) (Thanks to Michael)
* bug fixes
- fix memory leak
- virtgov editor saves number of cpus
- rare crashes

V 3.3.6
* features
- Russian translation (Thanks to Kotdis)
* bug fixes
- minor fixes

V 3.3.5
* features
- foreground/background profile switches are configurable (default: background)
- option to hide widget labels
* bug fixes
- fix insert new virtual governor does not save the governor
- remove profile switch governor settings since it only yielded troubles
- do not ( by default) switch off CPUs 

V 3.3.4
* features
- show deep sleep in adv stats 
- change font size of widget
- display temperature in °C, °F or K
- translation updates
* bug fixes
- errors
 
V 3.3.3
* features
- 
* bug fixes
- update small widget
- fix notification setting
- fix crashes

V 3.3.2
* features
- smaller widget and a new tiny widget
- log start and stop in switchlog
- clear all power usage from menu
* bug fixes
- prevent background process from being killed (if notification is shown)
- fix capabilities check
- fix crashes

V 3.3.1
* features
- display help icon on main screen
* bug fixes
- fix crash on editor close
- launch market if superuser is not installed
- fix crashes

V 3.3.0 
* features
- Japanese translation (by Sunatomo)
- a widget (as extension)