@@ -10,5 +10,6 @@
     <string name="dia_msg_switch_off_cpus">Switching off CPUs is know to cause problems with some kernels.  Doing this might save battery but can crash your device.</string>
     <string name="dia_yes_switch_off_cpus">Switch off CPUs</string>
     <string name="dia_no_switch_off_cpus">Be save</string>
+    <string name="tvCpuFreqBeginnerText">Min and max CPU frequencies are disables for beginner users, since changing the it does not improve battery live in normal conditions. Change you experiance level to access this feature.</string>
 
 </resources>
